--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     
-  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
 </body>
 
 </html>
